--- a/Apex Class/task3Handler.cls
+++ b/Apex Class/task3Handler.cls
@@ -1,3 +1,13 @@
+/**
+    Task 3 problem statement : 
+
+    Trigger on Case(After Update) when Status changes from working to closed.
+    1. be ensure AccountId on case not equal to null 
+    2. Create a contact with LastName as Case.Subject with same related account 
+         if no such contact exist for that Account.
+
+**/
+
 public class task3Handler {
     public static void updateCaseStatus(List<Case> caseList,Map<Id,Case> oldMapList){
         Set<Id> caseIdSet = new Set<Id>();  // Store CaseId of Current Trigger
