--- a/Apex Class/task6Helper.cls
+++ b/Apex Class/task6Helper.cls
@@ -2,11 +2,7 @@ public class task6Helper {
     public static void insertorUpdatecopyPickListFromOpptoAcc(Map<Id,List<String>> accIdsWithPickList){
         List<Account> accList = new List<Account>();
         for(Account acc : [Select Id,Account_Multi_Picklist__c From Account Where Id IN: accIdsWithPickList.keySet()]){
-            String ans = '';
-            for(String str : accIdsWithPickList.get(acc.Id)){
-                ans += str+';';
-            }
-            acc.Account_Multi_Picklist__c = ans;
+            acc.Account_Multi_Picklist__c = String.join(accIdsWithPickList.get(acc.Id), ';');
             System.debug(acc);
             accList.add(acc);
         }
